#!/bin/sh -u


PGINCDIR=$(Check_Include 		libpq-fe.h 				xyz 	clip-postgres 	Yes 	/usr/include 								"postgresql-devel-xx-$ARCH.(rpm/deb)")
Check_Library 		pgtypes 				.so 	clip-postgres 	Yes 	/usr/lib$C64 							"postgresql-devel-xx-$ARCH.(rpm/deb)"
PGLIBDIR=$(Check_Library 		pq 					.so 	clip-postgres 	Yes 	/usr/lib$C64 							"postgres-devel-xx-$ARCH.(rpm/deb)")

echo "PGINCDIR = $PGINCDIR" 		>>Makefile.ini
echo "PGLIBDIR = $PGLIBDIR" 		>>Makefile.ini
#!/bin/sh

touch configure.ok
