

function exitf()
{
	rm -f$V test_expat.c test_expat
	exit $1
}

Dir_Lib=$(Check_Library 		expat 					.so clip-xml 			Yes 	/usr/lib$C64 		"libexpat-devel-xx-$ARCH.(rpm/deb)")
EXPAT_EXIST=''

gcc -o test_expat test/test_expat.c -L$Dir_Lib -lexpat
if [ $? != 0 ] ; then
	echo "Warning: package expat-dev is not installed or has old version" >&2
	exitf 1
fi
echo "Dir_Lib = $Dir_Lib" >>Makefile.ini

exitf 0

touch configure.ok
