
CurDir="$PWD"
if ! [ -f ../../cliplibs/clip-gtk/Makefile.inc ] ; then
	cd ../../cliplibs/clip-gtk
	[ -f $CONFIGURE_SH ] && $CONFIGURE_SH
fi
cd $CurDir
[ -f ../../cliplibs/clip-gtk/Makefile.inc ] && cp -f$V ../../cliplibs/clip-gtk/Makefile.inc .

cat ./Makefile.inc >>Makefile.ini
touch configure.ok
