#!/bin/sh
cp -f$V ../Makefile.ini ../configure.ini .
DIRS_TO_SCAN=""
if [ -f ../xDevillibs/xDevil-nanfor.ok ] && [ -f ../xDevillibs/xDevil-netto.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN bdbfs"
fi
if [ -f ../xDevillibs/xDevil-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN cobra_clnt"
fi
if [ -f ../xDevillibs/xDevil-r2d2.ok ] && [ -f ../xDevillibs/xDevil-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN cobra_serv"
fi
if [ -f ../xDevillibs/xDevil-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN codb"
fi
if [ -f ../xDevillibs/xDevil-r2d2.ok ] && [ -f ../xDevillibs/xDevil-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN kamache"
fi
if [ -f ../xDevillibs/xDevil-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN ocmng"
fi
if [ -f ../xDevillibs/xDevil-gtk2.ok ] && [ -f ../xDevillibs/xDevil-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN udb"
fi
if [ -f ../xDevillibs/xDevil-gtk.ok ] && [ -f ../xDevillibs/xDevil-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN udbx"
fi
DIRS_TO_SCAN="$DIRS_TO_SCAN dbc debug doc_utils hiper pp utils "

echo "DIRS_TO_SCAN = \$(sort $DIRS_TO_SCAN )" >Makefile.01

#cat Makefile.ini Makefile.01 Makefile.in >Makefile
#!/bin/sh

touch configure.ok
