#!/bin/sh -u

cp -f$V ../configure.ini ../Makefile.ini .

touch configure.ok
echo 'export C_LIBS="-L/home/angelo/compile/xDevil/x86_64/xDevil64/lib64/ -lxDevil"' 					>>configure.ini
echo 'export xDevil_CP=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_cp64.sh' 					>>configure.ini
echo 'export xDevil_MAKELIB=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_makelib64.sh' 					>>configure.ini
echo 'export xDevil_MAKESLIB=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_makeslib64.sh' 					>>configure.ini
echo 'export xDevil_MSGFMT=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_msgfmt64.sh' 					>>configure.ini
echo 'export xDevil_MSGMERGE=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_msgmerge64.sh' 					>>configure.ini
echo 'export xDevil=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil64' 					>>configure.ini
echo 'export PO_BINS="po_extr64 po_subst64 po_compat64"' 					>>configure.ini
echo 'export TASK=libxDeviltask/libxDeviltask.a' 					>>configure.ini


echo "TARGET 				= 		lib\$(PROG) " 		>>Makefile.ini
echo "TARGET2				= 		lib\$(PROG2) " 		>>Makefile.ini
#echo "ATARGET 				= 		\$(TARGET)\$(DLLLIBSUFF) " 		>>Makefile.ini
#echo "ATARGET2				= 		\$(TARGET2)\$(DLLLIBSUFF) " 		>>Makefile.ini
#echo "RTARGET 				= 		\$(TARGET)\$(DLLREALSUFF) " 		>>Makefile.ini
#echo "RTARGET2				= 		\$(TARGET2)\$(DLLREALSUFF) " 		>>Makefile.ini
#echo "STARGET 				= 		\$(TARGET)\$(DLLSUFF) " 		>>Makefile.ini
#echo "STARGET2				= 		\$(TARGET2)\$(DLLSUFF) " 		>>Makefile.ini
echo "FULL_LIBxDevil 		= 		\$(xDevil_L_Dir)/libxDevil.so " 		>>Makefile.ini
echo "L_xDevilLIB 			= 		-L\$(xDevil_L_Dir) -lxDevil " 		>>Makefile.ini


echo "export C_LIBS=-L/home/angelo/compile/xDevil/x86_64/xDevil64/lib64/ -lxDevil " 		>>Makefile.ini
echo "export xDevil_CP=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_cp64.sh " 		>>Makefile.ini
echo "export xDevil_MAKELIB=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_makelib64.sh " 		>>Makefile.ini
echo "export xDevil_MAKESLIB=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_makeslib64.sh " 		>>Makefile.ini
echo "export xDevil_MSGFMT=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_msgfmt64.sh " 		>>Makefile.ini
echo "export xDevil_MSGMERGE=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil_msgmerge64.sh " 		>>Makefile.ini
echo "export xDevil=/home/angelo/compile/xDevil/x86_64/xDevil64/bin//xDevil64 " 		>>Makefile.ini
echo "export PO_BINS=po_extr64 po_subst64 po_compat64 " 		>>Makefile.ini
echo "export TASK=libxDeviltask/libxDeviltask.a " 		>>Makefile.ini
