#!/bin/sh -u
#
#	Configure script for xDevil
#	<uri@itk.ru>
# modified by Angelo GIRARDI
#
#OnScreen 2 "DIRS_TO_SCAN = >Makefile.01"
#echo "DIRS_TO_SCAN =" 												>Makefile.01
DIRS_TO_SCAN=""
#echo "C_FLAGS = \$(C_FLAGS) -I." 																	>>Makefile.ini
#echo "xDevilFLAGS = -l -w -O -n -I . -I include -I ../include -I\$(xDevil_I_Dir)" 	>>Makefile.ini
AllDir="bzip2 gzip com crypto fcgi gtk2 gtk dbtcp codb mysql odbc oracle postgres
nanfor netto r2d2 rtf xml"

# fw needs gtk2
#
export DIRS_TO_SCAN
OnScreen 2 "xDevil-interbase only on i386"
OnScreen 1 "xDevil-glade2 depends on xDevil-gtk2"
OnScreen 1 "xDevil-cti depends on xDevil-gtk2"
OnScreen 1 "xDevil-gtkextra depends on xDevil-gtk"
OnScreen 1 "xDevil-fw depends on xDevil-gtk & xDevil-cti"
OnScreen 1 "xDevil-postscript depends on xDevil-xml"
OnScreen 1 "xDevil-ui depends on xDevil-xml"

function Get_Check ()
{
	local VarX=" "
	[ -f xDevil-$1.ok ] && VarX="Y"
	[ -f xDevil-$1.no ] && VarX="N"
	while [[ $VarX != [YyNn] ]] ; do
		OnScreen 2 "Do you want to install library xDevil-$1 : [y/n] :"
		read -n 1 VarX 		>&0
	done
	if [[ "$VarX" = [Yy] ]] ; then
#	echo "DIRS_TO_SCAN += xDevil-$1" 							>>Makefile.01
		touch xDevil-$1.ok
		echo "$1"
	else
		rm -f xDevil-$1.ok
		touch xDevil-$1.no
	fi
}
#echo $AllDir
for dName in $AllDir ; do
	beep_on
#	touch xDevil-$dName.ok
#	echo $dName
	VarX=""
	VarX=$(Get_Check $dName)
	if ! [[ -z $VarX ]] ; then
		DIRS_TO_SCAN="$DIRS_TO_SCAN xDevil-"$VarX
	fi
#	OnScreen 1 $DIRS_TO_SCAN
done

if [[ $ARCH = "x86_64" ]] && [[ $C64 = "64" ]] ; then
	ARCH=x86_64
	C64=64
else
	ARCH=i586
	C64=""
	Get_Check "interbase"
fi

if [[ -f xDevil-gtk2.ok ]] ; then
	Get_Check "cti"
fi
if [[ -f xDevil-gtk.ok ]] ; then
	Get_Check "gtkextra"
fi
if [[ -f xDevil-gtk.ok ]] && [[ -f xDevil-cti.ok ]] ; then
	Get_Check "fw"
fi
if [[ -f xDevil-gtk2.ok ]] ; then
	Get_Check "glade2"
fi
if [[ -f xDevil-xml.ok ]] ; then
	Get_Check "ui"
fi
if [[ -f xDevil-xml.ok ]] ; then
	Get_Check "postscript"
fi
AllDir="$AllDir interbase cti fw gtkextra glade2 ui postscript"
DIRS_TO_SCAN=""
for dName in $AllDir ; do
	if [ -f xDevil-$dName.ok ] ; then
		DIRS_TO_SCAN="$DIRS_TO_SCAN xDevil-$dName"
	fi
done

echo "DIRS_TO_SCAN = $DIRS_TO_SCAN " 							>./Makefile.01
#!/bin/sh

touch configure.ok
